name:                morte-modules
version:             0.1.0.0
synopsis:            Desugar modules to morte
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       morte >=1.1.2 && <1.2
  hs-source-dirs:      src
  default-language:    Haskell2010